--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Calculator</title>
 </head>
 <body>
+
+    <div id="main-container"></div>
     
     <script src="assets/index.js"></script>
 </body>
