1. Add display to main container.
2. Add style to main container and body

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <div id="main-container"></div>
+    <div id="main-container">
+        <div id="display"><h1 id="display-text">8008135</h1></div>
+    </div>
     
     <script src="assets/index.js"></script>
 </body>
