--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
     <div id="main-container">
         <div id="display"><h1 id="display-text">8008135</h1></div>
+        <div id="operators">
+            <button class="button">➕</button>
+            <button class="button">➖</button>
+            <button class="button">✖️</button>
+            <button class="button">➗</button>
+            <button class="button">🟰</button>
+        </div>
     </div>
     
     <script src="assets/index.js"></script>
