--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 
     <div id="main-container">
         <div id="display"><h1 id="display-text">8008135</h1></div>
+        <div id="digit-container">
+            <div class="digits">
+                <button class="button">1️⃣</button>
+                <button class="button">2️⃣</button>
+                <button class="button">3️⃣</button>
+            </div>
+            <div class="digits">
+                <button class="button">4️⃣</button>
+                <button class="button">5️⃣</button>
+                <button class="button">6️⃣</button>
+            </div>
+            <div class="digits">
+                <button class="button">7️⃣</button>
+                <button class="button">8️⃣</button>
+                <button class="button">9️⃣</button>
+            </div>
+            <div class="digits">
+                <button class="button">▪️</button>
+                <button class="button">0️⃣</button>
+                <button class="button">©️</button>
+            </div>
+        </div>
         <div id="operators">
             <button class="button">➕</button>
             <button class="button">➖</button>
@@ -22,3 +44,8 @@
     <script src="assets/index.js"></script>
 </body>
 </html>
+
+
+
+
+
