Contain operators and digits

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div id="main-container">
         <div id="display"><h1 id="display-text">8008135</h1></div>
+        <div id="operators-digits">
         <div id="digit-container">
             <div class="digits">
                 <button class="button">1️⃣</button>
@@ -38,6 +39,7 @@
             <button class="button">✖️</button>
             <button class="button">➗</button>
             <button class="button">🟰</button>
+        </div>
         </div>
     </div>
     
