Add id to button one to test functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="operators-digits">
         <div id="digit-container">
             <div class="digits">
-                <button class="button">1️⃣</button>
+                <button id="one" class="button">1️⃣</button>
                 <button class="button">2️⃣</button>
                 <button class="button">3️⃣</button>
             </div>
