Remove default text from display for better testing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="main-container">
-        <div id="display"><h1 id="display-text">8008135</h1></div>
+        <div id="display"><h1 id="display-text"></h1></div>
         <div id="operators-digits">
         <div id="digit-container">
             <div class="digits">
