Add id's to all the buttons

--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
         <div id="digit-container">
             <div class="digits">
                 <button id="one" class="button">1️⃣</button>
-                <button class="button">2️⃣</button>
-                <button class="button">3️⃣</button>
+                <button id="two" class="button">2️⃣</button>
+                <button id="three" class="button">3️⃣</button>
             </div>
             <div class="digits">
-                <button class="button">4️⃣</button>
-                <button class="button">5️⃣</button>
-                <button class="button">6️⃣</button>
+                <button id="four" class="button">4️⃣</button>
+                <button id="five" class="button">5️⃣</button>
+                <button id="six" class="button">6️⃣</button>
             </div>
             <div class="digits">
-                <button class="button">7️⃣</button>
-                <button class="button">8️⃣</button>
-                <button class="button">9️⃣</button>
+                <button id="seven" class="button">7️⃣</button>
+                <button id="eight" class="button">8️⃣</button>
+                <button id="nine" class="button">9️⃣</button>
             </div>
             <div class="digits">
-                <button class="button">▪️</button>
-                <button class="button">0️⃣</button>
-                <button class="button">©️</button>
+                <button id="decimal" class="button">▪️</button>
+                <button id="zero" class="button">0️⃣</button>
+                <button id="cancel" class="button">©️</button>
             </div>
         </div>
         <div id="operators">
-            <button class="button">➕</button>
-            <button class="button">➖</button>
-            <button class="button">✖️</button>
-            <button class="button">➗</button>
-            <button class="button">🟰</button>
+            <button id="add" class="button">➕</button>
+            <button id="sub" class="button">➖</button>
+            <button id="multi" class="button">✖️</button>
+            <button id="divide" class="button">➗</button>
+            <button id="equals" class="button">🟰</button>
         </div>
         </div>
     </div>
