Add backspace button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <button id="multi" class="button">✖️</button>
             <button id="divide" class="button">➗</button>
             <button id="equals" class="button">🟰</button>
+            <button id="backspace" class="button">🔙</button>
         </div>
         </div>
     </div>
