--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
     <title>Calculator</title>
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Geo&display=swap');
+</style>
+
 </head>
 <body>
 
