Add old calculator font to display

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
     <title>Calculator</title>
-    <style>
-@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Geo&display=swap');
-</style>
 
 </head>
 <body>
 
     <div id="main-container">
-        <div id="display"><h1 id="display-text"></h1></div>
+        <div id="display"><h1 id="display-text">888888888</h1></div>
         <div id="operators-digits">
         <div id="digit-container">
             <div class="digits">
