Add operators to screen and default digits

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 <body>
 
     <div id="main-container">
-        <div id="display"><h1 id="display-text">888888888</h1></div>
+        <div id="display"><h1 id="display-text">88888888</h1>
+        <div id="screen-operators">
+            <span id="screen-add" class="screen-operators-group">+</span>
+            <span id="screen-sub" class="screen-operators-group">-</span>
+            <span id="screen-multi" class="screen-operators-group">×</span>
+            <span id="screen-divide" class="screen-operators-group">÷</span>
+            <span id="screen-equals" class="screen-operators-group">=</span>
+        </div>
+        
+        </div>
         <div id="operators-digits">
         <div id="digit-container">
             <div class="digits">
