Add overlay display digits with lighting effect

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 
     <div id="main-container">
-        <div id="display"><h1 id="display-text">88888888</h1>
+        
+        <div id="display">
+            <h1 id="back-layer-text">88888888</h1>
+            <h1 id="display-text"></h1>
+
         <div id="screen-operators">
             <span id="screen-add" class="screen-operators-group">+</span>
             <span id="screen-sub" class="screen-operators-group">-</span>
