Add backspace light to display

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <span id="screen-multi" class="screen-operators-group">×</span>
             <span id="screen-divide" class="screen-operators-group">÷</span>
             <span id="screen-equals" class="screen-operators-group">=</span>
+            <span id="screen-backspace" class="screen-operators-group">↵</span>
         </div>
         
         </div>
